--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,11 @@
     src: url(../fonts/roboto/Roboto-Thin.ttf);
 }
 
+@font-face {
+    font-family: RobotoBold;
+    src: url(../fonts/roboto/Roboto-Bold.ttf);
+}
+
 .roboto{
     font-family: RobotoThin;
 }
@@ -39,7 +44,7 @@
 
 }
 
-.price-container{
+.package-container{
 
 
     border: 2px solid white;
@@ -52,18 +57,21 @@
 
 }
 
-.price-box{
+.package-box{
     display: block;
     margin: 0 10px;
     float: left;
     position: relative;
     width: 30%;
-    height: 90%;
+
     background: #ffffff;
+    -webkit-box-shadow: 4px 8px 22px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 8px 22px -8px rgba(0,0,0,0.75);
+    box-shadow: 4px 8px 22px -8px rgba(0,0,0,0.75);
 
 }
 
-.price-title{
+.package-title{
     width: 100%;
     font-size: 1.2em;
     font-family: RobotoLight;
@@ -74,10 +82,46 @@
     float: left;
 }
 
-.price-icon{
+.package-icon{
     clear: both;
     width: 15%;
     margin: auto;
     display: block;
     padding: 15px;
+}
+
+.package-content p{
+     font-family: RobotoThin;
+     font-size: 0.8em;
+     text-align: center;
+    color: #a8a8a8;
+}
+
+.package-price-box{
+    background-image: linear-gradient(45deg, rgb(35, 57, 70), rgb(54, 78, 90) 35%, rgb(22, 143, 119) 90%);
+}
+
+.package-price-box p{
+    text-align: center;
+}
+
+.package-price-box .dollar{
+    font-family: RobotoThin;
+    color: #fff;
+
+}
+
+.package-price-box .price{
+    font-family: RobotoBold;
+    color: #fff;
+    font-size: 2.5em;
+    padding-top: 15px;
+}
+
+.package-price-box .period{
+    font-family: RobotoThin;
+    color: #fff;
+    font-size: 0.5em;
+    padding-top: 5px;
+    margin: 0;
 }
