--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,6 @@
 }
 
 .package-icon{
-    clear: both;
     width: 15%;
     margin: auto;
     display: block;
@@ -97,6 +96,37 @@
     color: #a8a8a8;
 }
 
+.package-price-box .package-fab{
+
+
+
+}
+
+.package-cart-icon{
+    width: 25px;
+    height: 25px;
+    background-color: #168f77;
+    border-radius: 50%;
+    box-shadow: 0 3px 5px 0 #4b4b4b;
+    transition: all 0.1s ease-in-out;
+
+
+
+    position: absolute;
+    right: 20px;
+    bottom: 90px;
+    padding: 10px;
+}
+
+path{
+    background: white;
+}
+
+.package-cart-icon:hover{
+    box-shadow: 0 3px 14px 0 #4b4b4b;
+    transform: scale(1.05);
+}
+
 .package-price-box{
     background-image: linear-gradient(45deg, rgb(35, 57, 70), rgb(54, 78, 90) 35%, rgb(22, 143, 119) 90%);
 }
@@ -108,13 +138,16 @@
 .package-price-box .dollar{
     font-family: RobotoThin;
     color: #fff;
-
+    padding: 0;
+    margin: 0;
 }
 
 .package-price-box .price{
     font-family: RobotoBold;
     color: #fff;
     font-size: 2.5em;
+    padding: 0;
+    margin: 0;
     padding-top: 15px;
 }
 
@@ -124,4 +157,6 @@
     font-size: 0.5em;
     padding-top: 5px;
     margin: 0;
+    padding-bottom: 30px;
+    opacity: 0.6;
 }
