--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,25 @@
     src: url(../fonts/roboto/Roboto-Bold.ttf);
 }
 
+@font-face {
+    font-family: RobotoCondensedLight;
+    src: url(../fonts/roboto/RobotoCondensed-Light.ttf);
+}
+
+@font-face {
+    font-family: RobotoCondensed;
+    src: url(../fonts/roboto/RobotoCondensed-Regular.ttf);
+}
+
 .roboto{
     font-family: RobotoThin;
+}
+
+#container-main{
+    width: 1062px;
+    height: 100%;
+    margin: auto;
+    display: table;
 }
 
 #container{
@@ -24,8 +41,7 @@
     height: 100%;
     position: absolute;
     top: 0;
-    left:0;
-
+    left: 0;
 
     background-image: linear-gradient(45deg, rgb(35, 57, 70), rgb(54, 78, 90) 35%, rgb(22, 143, 119) 90%);
 }
@@ -38,31 +54,29 @@
 
 
     position: absolute;
-    top: 0;
-    left:0;
+
 
 
 }
 
 .package-container{
-
-
-    border: 2px solid white;
-    width: 1000px;
-    height: 70%;
+display: table-cell;
     margin: auto;
-    padding: 20px;
+    position: relative;
+    padding: 0px;
 
-
+    vertical-align: middle;
 
 }
 
 .package-box{
-    display: block;
-    margin: 0 10px;
+
+    margin: 0 12px;
     float: left;
     position: relative;
-    width: 30%;
+
+    width: 330px;
+    /*width: 30%;*/
 
     background: #ffffff;
     -webkit-box-shadow: 4px 8px 22px -8px rgba(0,0,0,0.75);
@@ -89,10 +103,16 @@
     padding: 15px;
 }
 
+.package-content{
+    padding-bottom: 25px;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
 .package-content p{
-     font-family: RobotoThin;
-     font-size: 0.8em;
-     text-align: center;
+    font-family: RobotoCondensed;
+    font-size: 0.8em;
+    text-align: center;
     color: #a8a8a8;
 }
 
@@ -102,6 +122,8 @@
 
 }
 
+
+
 .package-cart-icon{
     width: 25px;
     height: 25px;
@@ -109,17 +131,12 @@
     border-radius: 50%;
     box-shadow: 0 3px 5px 0 #4b4b4b;
     transition: all 0.1s ease-in-out;
-
-
-
     position: absolute;
     right: 20px;
     bottom: 90px;
     padding: 10px;
-}
+    cursor: pointer;
 
-path{
-    background: white;
 }
 
 .package-cart-icon:hover{
