Design for large screens

--- a/styles/style-extra-large.css
+++ b/styles/style-extra-large.css
@@ -4,3 +4,11 @@
     width: 1062px;
     margin: auto;
 }
+.package-box{
+    width: 330px;
+}
+
+.package-content{
+    padding-left: 50px;
+    padding-right: 50px;
+}
