--- a/styles/style-extra-large.css
+++ b/styles/style-extra-large.css
@@ -8,7 +8,29 @@
     width: 330px;
 }
 
+.package-title{
+    font-size: 1.2em;
+}
+
 .package-content{
     padding-left: 50px;
     padding-right: 50px;
+}
+
+.package-cart-icon{
+    width: 20px;
+    height: 20px;
+    right: 25px;
+    bottom: 90px;
+}
+
+.package-price-box .price{
+    font-size: 2.5em;
+    padding: 15px 0 0;
+}
+
+.package-price-box .period{
+    font-size: 0.5em;
+    padding-top: 5px;
+    padding-bottom: 30px;
 }
