--- a/styles/style-extra-small.css
+++ b/styles/style-extra-small.css
@@ -1,27 +1,27 @@
 #container-main{
-    width: 400px;
+    width: 100%;
     /*height: auto;*/
 
 }
 
 .package-container{
-    width: 400px;
+    width: 100%;
     margin: auto;
 
 }
 
 .package-box{
-    width: 400px;
-    margin: 10px 0;
+    width: 100%;
+    margin: 5px 0;
 }
 
 .package-title{
-    font-size: 2.2em;
+    font-size: 2.0em;
 }
 
 .package-content{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #container{
@@ -29,15 +29,15 @@
 }
 
 .package-content p{
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 .package-cart-icon{
-    width: 40px;
-    height: 40px;
-    padding: 20px;
-    right: 55px;
-    bottom: 145px;
+    width: 30px;
+    height: 30px;
+    padding: 15px;
+    right: 25px;
+    bottom: 155px;
 }
 
 .package-price-box .price{
